--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -124,6 +124,12 @@ button {
 	cursor: pointer;
 }
 
+.text-button {
+	border: var(--t1) 2px solid;
+	padding: 5px 10px;
+	border-radius: 5%;
+}
+
 input[type='text'] {
 	appearance: none;
 	border: none;
