feat: Color Mode setup

--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -69,7 +69,7 @@ body[data-color-mode='light'] {
 	/* mostly for tooltips */
 	--b3: #ffffff42;
 	/* text & T color */
-	--t1: #e4ebf3;
+	--t1: #0c0f13;
 	/* peps color */
 	--x1: blue;
 }
