--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -52,7 +52,7 @@ body[data-color-mode='grey'] {
 	/* background color */
 	--b1: #424649;
 	/* background color opacity*/
-	--b1o3: rgba(255, 255, 255, 0.384);
+	--b1o3: rgba(19, 17, 17, 0.322);
 	/* b1 light var */
 	--b2: #ffffff1f;
 	/* mostly for tooltips */
@@ -81,7 +81,7 @@ body[data-color-mode='dark'] {
 	/* background color */
 	--b1: #141516;
 	/* background color opacity*/
-	--b1o3: rgba(255, 255, 255, 0.384);
+	--b1o3: rgba(19, 17, 17, 0.322);
 	/* b1 light var */
 	--b2: #ffffff1f;
 	/* mostly for tooltips */
@@ -98,8 +98,16 @@ body[data-color-mode='dark'] {
 	/* Border radius */
 	--br: 8px;
 
-	/* Border width */
-	--borderWidth: 2px;
+	/* Border */
+	--borderWidthMedium: 3px;
+	--borderWidthSmall: 2px;
+
+	/* Max width for medium-sized elements */
+	--maxWidthMedium: 500px;
+
+	/* Spacing for margins, padding, gaps etc...*/
+	--spacingMedium: 10px;
+	--spacingSmall: 5px;
 }
 
 body {
@@ -108,6 +116,10 @@ body {
 
 * {
 	margin: 0;
+	box-sizing: border-box;
+}
+
+a {
 	text-decoration: none;
 }
 
@@ -133,15 +145,27 @@ button {
 	color: inherit;
 	cursor: pointer;
 	border: none;
-	transition: 500ms;
+	transition: 200ms;
+	border: var(--borderWidthSmall) solid transparent;
 }
 
-button:hover {
+.hover-border {
+	transition: 200ms;
+	border: var(--borderWidthSmall) solid transparent;
+}
+
+button:hover,
+.hover-border:hover {
+	border: var(--borderWidthSmall) solid var(--b3);
+}
+
+button:active {
 	background: var(--b3);
 }
 
 .text-button {
-	padding: 5px 10px;
+	background: var(--b2);
+	padding: var(--spacingSmall) var(--spacingMedium);
 	border-radius: var(--br);
 }
 
@@ -160,4 +184,90 @@ input[type='text'] {
 .basic-container {
 	border-radius: var(--br);
 	background: var(--b2);
+}
+
+/* ********** */
+/* INPUTS */
+/* ********** */
+
+/* range */
+
+input[type='range'] {
+	--track-height: 14px;
+	--track-border-radius: 20px;
+	--thumb-width: 20px;
+	-webkit-appearance: none;
+	appearance: none;
+	background: transparent;
+	cursor: pointer;
+	width: 100%;
+}
+
+/***** Track Styles *****/
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type='range']::-webkit-slider-runnable-track {
+	background: var(--b3);
+	height: var(--track-height);
+	border-radius: var(--track-border-radius);
+}
+
+/******** Firefox ********/
+input[type='range']::-moz-range-track {
+	background: var(--b3);
+	height: var(--track-height);
+	border-radius: var(--track-border-radius);
+}
+input[type='range']::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	height: var(--thumb-width);
+	width: var(--thumb-width);
+	background: none;
+	border-radius: 100%;
+	margin-top: -3px;
+	border: var(--borderWidthMedium) solid var(--t1);
+}
+
+input[type='range']::-moz-range-thumb {
+	border: var(--borderWidthMedium) solid var(--t1); /*Removes extra border that FF applies*/
+	border-radius: 100%;
+	background: none;
+	height: var(--thumb-width);
+	width: var(--thumb-width);
+}
+
+/* color */
+
+input[type='color'] {
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	background: none;
+	border: var(--borderWidthMedium) solid var(--b2);
+	cursor: pointer;
+	padding: 0;
+	border-radius: var(--br);
+}
+
+/* *:focus {
+	border-radius: 0;
+	outline: none;
+} */
+
+::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+
+::-webkit-color-swatch {
+	border: 0;
+	border-radius: 0;
+}
+
+::-moz-color-swatch,
+::-moz-focus-inner {
+	border: 0;
+}
+
+::-moz-focus-inner {
+	padding: 0;
 }
