--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -42,6 +42,7 @@ code {
 h5,
 span,
 label,
+a,
 .text-button {
 	color: var(--t1);
 	font-family: var(--typo1);
@@ -219,14 +220,14 @@ input[type='range'] {
 /***** Track Styles *****/
 /***** Chrome, Safari, Opera, and Edge Chromium *****/
 input[type='range']::-webkit-slider-runnable-track {
-	background: var(--b4);
+	background: var(--b3);
 	height: var(--track-height);
 	border-radius: var(--track-border-radius);
 }
 
 /******** Firefox ********/
 input[type='range']::-moz-range-track {
-	background: var(--b4);
+	background: var(--b3);
 	height: var(--track-height);
 	border-radius: var(--track-border-radius);
 }
