feat: Minor fixes and improvements

--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -133,7 +133,7 @@ ul {
 }
 
 .internal-icoglyph-button,
-svg {
+.svg-default {
 	stroke: var(--t1);
 	stroke-linejoin: round;
 	stroke-linecap: round;
