fix(TagsDisplay): Attempt to fix issue where tags are not displayed on main domain

--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -94,9 +94,9 @@ body {
 	/* text color */
 	--t1: rgb(var(--front-color));
 	/*  */
-	--t2: rgba(var(--front-color), 0.7548);
+	--t2: rgba(var(--back-color), 0.7548);
 	/*  */
-	--t3: rgba(var(--front-color), 0.5698);
+	--t3: rgba(var(--back-color), 0.5698);
 
 	/* Set the body background color */
 	background: var(--b1);
