--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -9,11 +9,15 @@
 h1 {
 	color: var(--t1);
 	font-family: var(--typo1);
+	font-weight: 500;
+	font-size: 1.6rem;
 }
 
 h2 {
 	color: var(--t1);
 	font-family: var(--typo1);
+	font-weight: 400;
+	font-size: 1rem;
 }
 
 h3 {
@@ -204,7 +208,8 @@ input[type='text'] {
 
 .container-1 {
 	gap: var(--spacing-small);
-	padding: var(--spacing-medium);
+	padding: var(--spacing-small) var(--spacing-medium);
+	border-radius: var(--border-radius);
 }
 
 /* ********** */
