--- a/static/global-style/global.css
+++ b/static/global-style/global.css
@@ -208,6 +208,8 @@ input[type='text'] {
 	display: flex;
 	align-items: center;
 	width: fit-content;
+
+	white-space: nowrap;
 }
 
 /* text must be in span */
